# acnode-cl

./: .gitignore  .gitmodules  .travis.yml  ACNodeClient.ino  CMakeLists.txt  Changelog.md  File.cpp  README.md  TESTING.txt  acnode.h  announcer.cpp  announcer.h  button.cpp  button.h  cache.cpp  cache.h  card.cpp  card.h  cli.cpp  cli.h  config.h  door.cpp  door.h  eepromcache.cpp  eepromcache.h  enable-onemstasktimer.patch  every.cpp  getToolchain.sh  microrl.c  microrl.h  network.cpp  network.h  platformio.ini  rgb.cpp  rgb.h  sdcache.cpp  sdcache.h  settings.cpp  settings.h  test_12mAmps_PB4.ino  (+8 more)
PN532/: PN532.h
PN532_I2C/: PN532_I2C.cpp
cmake/: AddVendorLibrary.cmake
hardware/: Card front middle.dxf  Card front.dxf  README.md  backing-frame.dxf  backing-v1.dxf  launchpad-footprint.dxf
hardware/ACNode-Shield/: ACNode-Shield-2x2.kicad_pcb  ACNode-Shield-2x2.kicad_pcb-bak  ACNode-Shield-cache.lib  ACNode-Shield.bak  ACNode-Shield.kicad_pcb  ACNode-Shield.kicad_pcb-bak  ACNode-Shield.net  ACNode-Shield.pro  ACNode-Shield.sch  _saved_ACNode-Shield.sch  fp-lib-table
hardware/ACNode-Shield/gerbers/: ACNode-Shield-B.Cu.gbr  ACNode-Shield-B.Mask.gbr  ACNode-Shield-B.SilkS.gbr  ACNode-Shield-Bottom.gbr  ACNode-Shield-Edge.Cuts.gbr  ACNode-Shield-F.Cu.gbr  ACNode-Shield-F.Mask.gbr  ACNode-Shield-F.SilkS.gbr  ACNode-Shield-Top.gbr  ACNode-Shield.drl
hardware/ACNode-Shield/lib/: srd-05vdc-sl-c.bak  srd-05vdc-sl-c.lib
hardware/ACNode-Shield/mod/: ws2812.mod
hardware/New-ACNode-Doorbot-Shield/: README.md  _autosave-acnode-doorbot.sch  acnode-doorbot-cache.lib  acnode-doorbot-rescue.lib  acnode-doorbot.bak  acnode-doorbot.kicad_pcb  acnode-doorbot.kicad_pcb-bak  acnode-doorbot.net  acnode-doorbot.sch-bak  dinrail_clip.stl  sym-lib-table
hardware/New-ACNode-Doorbot-Shield/Gerbers/: acnode-doorbot-B.Cu.gbr  acnode-doorbot-B.Mask.gbr  acnode-doorbot-B.Paste.gbr  acnode-doorbot-B.SilkS.gbr  acnode-doorbot-B_Cu.gbl  acnode-doorbot-B_Mask.gbs  acnode-doorbot-B_Paste.gbp  acnode-doorbot-B_SilkS.gbo  acnode-doorbot-Edge.Cuts.gbr  acnode-doorbot-Edge_Cuts.gm1  acnode-doorbot-F.Cu.gbr  acnode-doorbot-F.Mask.gbr  acnode-doorbot-F.Paste.gbr  acnode-doorbot-F.SilkS.gbr  acnode-doorbot-F_Cu.gtl  acnode-doorbot-F_Mask.gts  acnode-doorbot-F_Paste.gtp  acnode-doorbot-F_SilkS.gto  acnode-doorbot-NPTH-drl_map.gbr  acnode-doorbot-NPTH.drl  acnode-doorbot-PTH-drl_map.gbr  acnode-doorbot-PTH.drl  acnode-doorbot.drl
hardware/New-New-ACNode-Shield/: ExtraParts.lib  LED_Switching.sch  Launchpad.lib  New-New-ACNode-Shield-cache.lib  New-New-ACNode-Shield.kicad_pcb  New-New-ACNode-Shield.pro  New-New-ACNode-Shield.sch  Power.sch  Readme.md  SPIFlash.sch  UserIO.sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/New-New-ACNode-Shield/ExtraParts.pretty/: Connector-3.81mm-2pin.kicad_mod  Connector-3.81mm-3pin.kicad_mod  (+5 more)
hardware/acnode-reader-direct/: acnode-reader-direct.kicad_pcb  acnode-reader-direct.kicad_prl  acnode-reader-direct.kicad_pro  acnode-reader-direct.kicad_sch  readme.md
lib/: CMakeLists.txt  PN532_HSU  PN532_main
lib/MQTTClient/: MQTTClient.h  WifiIPStack.h  library.properties
lib/OneMsTaskTimer/: OneMsTaskTimer.cpp
lib/PN532/: README.md
lib/PN532/PN532/: PN532.cpp  PN532Interface.h
lib/PN532/PN532_HSU/: PN532_HSU.cpp  PN532_HSU.h
lib/PN532/PN532_I2C/: PN532_I2C.h
lib/PN532/PN532_SPI/: PN532_SPI.cpp  PN532_SPI.h
lib/SD/: SD.cpp  SD.h  library.json  readme.md
lib/SD/utility/: FatStructs.h  Sd2Card.cpp  Sd2Card.h  Sd2PinMap.h  SdFile.cpp  SdInfo.h  SdVolume.cpp
lib/Syslog/: README  keywords.txt  syslog.cpp  syslog.h
lib/Syslog/examples/SyslogClient/: SyslogClient.ino
lib/aJson/: aJSON.cpp  aJSON.h
src/: ACNodeClient.ino  CMakeLists.txt  README.md  TESTING.txt  acnode.cpp  acnode.h  announcer.cpp  announcer.h  broadcastannouncer.cpp  broadcastannouncer.h  button.cpp  button.h  cache.cpp  cache.h  cacheoverlay.cpp  cacheoverlay.h  cli.cpp  colour.cpp  colour.h  door.cpp  door.h  doorbot.cpp  doorbot.h  doorbot_ac.cpp  doorbot_ac.h  eepromcache.cpp  eepromcache.h  every.h  lfscache.cpp  lfscache.h  littlefs.cpp  littlefs.h  macros.h  main.cpp  maintainercachemaintainer.cpp  maintainercachemaintainer.h  menu.cpp  menu.h  microrl.c  microrl.cpp  (+26 more)
src/ACServer/: ACServer.h  DataRecords.cpp  DataRecords.h  RealACServer.cpp  RealACServer.h
src/CardReader/: CardId.h  cardreader.h  commsprotocol.c  commsprotocol.h  pn532cardreader.cpp  pn532cardreader.h  remotergb.h  serialreader.cpp  serialreader.h  tickcounter.c  tickcounter.h
targets/tivac-launchpad/: CMakeLists.txt  EK-TM4C1294XL.cmake
utility/: SdFat.h  SdFatUtil.h  SdFatmainpage.h
(+42 files in other folders)
